--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
-cogs/__pycache__/Download_Img.cpython-38.pyc
-cogs/__pycache__/Music.cpython-38.pyc
+cogs/__pycache__/
 token.json
 chromedriver.exe
 cogs/key.json
 Run.bat
-cogs/__pycache__/chatgpt.cpython-38.pyc
 Pixiv_imgs/
